--- a/plasticc.yml
+++ b/plasticc.yml
@@ -130,6 +130,13 @@ dependencies:
   - zict=0.1.3=py36_0
   - zlib=1.2.11=hf3cbc9b_2
   - pip:
+    - chardet==3.0.4
+    - future==0.17.1
+    - idna==2.7
     - msgpack==0.5.6
+    - requests==2.20.1
+    - tqdm==4.28.1
+    - tsfresh==0.11.1
+    - urllib3==1.24.1
 prefix: /anaconda3/envs/plasticc
 
